# dart_native_imaging

./: .gitignore  .gitlab-ci.yml  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: app.yaml  main.yml  publish.yml
android/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/kotlin/com/example/native_imaging/: NativeImagingPlugin.kt
codegen/: autoffi.jq  autojs.jq  codegen.sh
example/: example.dart
ios/: native_imaging.podspec
ios/Classes/: NativeImagingPlugin.m  SwiftNativeImagingPlugin.swift
ios/src/: CMakeLists.txt  ImPlatform.h  Imaging.h  extra.c  extra.h
ios/src/blurhash/: encode.c
js/: .gitignore  Makefile  prefix.js  runtime_methods.json  wrapper.js
lib/: js.dart  native.dart  native_imaging.dart
lib/src/: ffi.dart  ffi_base.dart
scripts/: prepare.sh  test.sh
src/: CMakeLists.txt  Imaging.h  extra.c
src/libjpeg-turbo/: jconfigint.h
test/: img_test.dart  img_test.html
